# secad

./: .gitignore  Justfile  Makefile  NOTES.md  README.md  custom-entrypoint.sh  db.Dockerfile  docker-compose.yml  hackathon.md  kes.md  llm.docker-compose.yml  rag.Dockerfile  rag.docker-compose.yml  secad.Dockerfile  secad.docker-compose.yml
.devcontainer/: app.Dockerfile  custom-entrypoint.sh  db.Dockerfile  (+3 more)
kes/: Makefile  pyproject.toml  setup.py
kes/.streamlit/: config.toml
kes/knowledge_retrieval/: main_crew.py  utils.py
kes/knowledge_retrieval/general/: general_crew.py
kes/knowledge_retrieval/image_review_crew/: image_review.py
kes/knowledge_retrieval/product_security_crew/: product_security_agents.py  product_security_tasks.py  requirement_refinement_crew.py  security_requirement_crew.py  threat_model_crew.py
kes/knowledge_retrieval/tools/: search_tools.py
kes/rag_management/: data_prep.py  embedding_creation.py  query_embedding.py
kes/ui/: utils.py
kes/ui/config/: side_bar_definition.yml
kes/ui/gradio_ui/: main.py
kes/ui/streamlit_ui/: launch.py
kes/ui/streamlit_ui/product_security_section/: requirement_refinement_tab.py  security_review_tab.py  threat_model_tab.py
secad/: Justfile  Makefile  env.sample  notebook.ipynb  old.requirements.txt  pyproject.toml
secad/knowledge_retrieval/: models.py
secad/knowledge_retrieval/architecture_review_crew/: diagram_review.py  image_review.py
secad/knowledge_retrieval/diagram_analysis/: diagram_analysis_agents.py  diagram_analysis_crew.py  diagram_analysis_tasks.py
secad/knowledge_retrieval/image_review_crew/: image_review.py
secad/knowledge_retrieval/product_security_crew/: security_requirement_crew.py
secad/knowledge_retrieval/threat_analysis/: threat_analysis_agents.py  threat_analysis_crew.py  threat_analysis_tasks.py
secad/knowledge_retrieval/threat_analysis_auto/: threat_analysis_auto_agents.py  threat_analysis_auto_crew.py  threat_analysis_auto_tasks.py
secad/knowledge_retrieval/tools/: rag.py
secad/rag_management/: data_prep.py  embedding_creation.py  query_embedding.py  utils.py
secad/ui/: utils.py
secad/ui/config/: side_bar_definition.yml
secad/ui/gradio_ui/: main.py
secad/ui/streamlit_ui/: launch.py
secad/ui/streamlit_ui/product_security_section/: threat_analysis_tab.py  threat_model_tab.py
v2/: Makefile  (+1 more)
(+69 files in other folders)
